support long value version

--- a/pkg/router/route.conf
+++ b/pkg/router/route.conf
@@ -1,5 +1,5 @@
 {{range $port := .Ports}}
-{{range $version := $.Versions}}
+{{range $version, $value := $.Versions}}
 upstream {{$.Service}}-kt-mesh-{{$version}}-{{index $port 0}} {
   server {{$.Service}}-kt-mesh-{{$version}}:{{index $port 0}};
 }
@@ -12,7 +12,6 @@ upstream {{$.Service}}-kt-stuntman-{{index $port 0}} {
 {{range $port := .Ports}}
 server {
     listen  {{index $port 1}};
-    listen  [::]:{{index $port 1}};
     server_name  {{$.Service}};
     underscores_in_headers  on;
     proxy_intercept_errors  off;
@@ -38,8 +37,8 @@ server {
         proxy_redirect off;
         proxy_http_version 1.1;
 
-    {{range $version := $.Versions}}
-        if ($http_{{$.Header}} = "{{$version}}") {
+    {{range $version, $value := $.Versions}}
+        if ($http_{{$.Header}} = "{{$value}}") {
             proxy_pass  http://{{$.Service}}-kt-mesh-{{$version}}-{{index $port 0}};
         }
     {{end}}
